force-app/main/default/objects/Utility_Bill__c/Utility_Bill__c.object-meta.xml
<CustomObject>
    <description>One utility bill per meter per billing month (FSD 5.10.5). Captures bill date and read date separately because billing and consumption periods differ, stores previous and current meter readings, and carries the usage and rate variance decomposition.</description>
    <label>Utility Bill</label>
    <nameField>
        <displayFormat>UB-{00000}</displayFormat>
        <label>Utility Bill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utility Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <!--
      sharingModel is ControlledByParent because Meter__c is the master in a master detail
      relationship. That is deliberate, not incidental: a bill must be visible to exactly
      the people who can see its meter, and inheriting removes the risk of two independent
      criteria sharing rules drifting apart. FSD 5.10.3 calls this object a child of Meter.
      Justified as a custom object because no standard object models a periodic consumption
      and charge record.
    -->
</CustomObject>