force-app/main/default/objects/Utility_Bill__c/fields/Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Date__c</fullName>
    <description>The date the provider issued the bill. FSD 5.10.5 requires the bill date and the read date to be captured separately, because the billing period and the consumption period do not line up.</description>
    <inlineHelpText>The invoice date printed by the provider. This is not the date the meter was read; record that in Read Date, which is often several days earlier.</inlineHelpText>
    <label>Bill Date</label>
    <type>Date</type>
</CustomField>