force-app/main/default/objects/Utility_Bill__c/fields/Current_Reading__c.field-meta.xml
<CustomField>
    <fullName>Current_Reading__c</fullName>
    <description>The register reading at the end of the billing period, as printed on the invoice. Where this is lower than the previous reading the register has either rolled over or the meter was swapped; the two look identical and are resolved in Apex.</description>
    <inlineHelpText>The closing reading from the invoice, exactly as printed. A value lower than the previous reading is normal when the register has rolled over, so enter it as shown.</inlineHelpText>
    <label>Current Reading</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>