force-app/main/default/objects/Utility_Bill__c/fields/Previous_Reading__c.field-meta.xml
<CustomField>
    <fullName>Previous_Reading__c</fullName>
    <description>The register reading at the start of the billing period, as printed on the invoice. FSD 5.10.5 requires previous and current readings to be stored so consumption can be recalculated and audited rather than taken on trust from the provider.</description>
    <inlineHelpText>The opening reading from the invoice, exactly as printed. Do not adjust it for a rollover; the rollover is handled for you using the Register Modulus on the meter.</inlineHelpText>
    <label>Previous Reading</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>