force-app/main/default/objects/Utility_Bill__c/fields/Read_Date__c.field-meta.xml
<CustomField>
    <fullName>Read_Date__c</fullName>
    <description>The date the meter was actually read. FSD 5.10.5 keeps this separate from the bill date. This is the field that orders bills into a consumption sequence, so it, not the bill date, determines which bill is the prior bill.</description>
    <inlineHelpText>The date the meter reading was taken, as printed on the invoice. Bills are sequenced by this date, so an inaccurate read date will attribute consumption to the wrong period.</inlineHelpText>
    <label>Read Date</label>
    <type>Date</type>
    <!--
      Date, not DateTime. ARCHITECTURE section 1 forbids a Date suffix on a DateTime field;
      a meter read is recorded to the day on the invoice, so a date only field is correct
      and the Date suffix is right.
    -->
</CustomField>