force-app/main/default/objects/Utility_Bill__c/fields/Total_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges_Amount__c</fullName>
    <description>Sum of every charge line on this bill. The bill total is rolled up from its components rather than typed, so it can never disagree with the charge lines it is made of. FSD 5.10.3 stores components as child line items.</description>
    <inlineHelpText>Adds up the Charge Lines below. If this does not match the invoice total, a charge line is missing or duplicated; correct the lines rather than looking for a field to type the total into.</inlineHelpText>
    <label>Total Charges</label>
    <summarizedField>Charge_Line__c.Charge_Amount__c</summarizedField>
    <summaryForeignKey>Charge_Line__c.Utility_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
    <!--
      DEPLOY ORDER: Charge_Line__c, its Utility_Bill__c master detail and its
      Charge_Amount__c field must all exist before this field deploys.
      A roll up summary is never blank; with no charge lines it reads 0, which is why every
      formula below guards on zero rather than on blank.
    -->
</CustomField>