force-app/main/default/objects/Utility_Bill__c/listViews/All_Utility_Bills.listView-meta.xml
<ListView>
    <fullName>All_Utility_Bills</fullName>
    <columns>NAME</columns>
    <columns>Meter__c</columns>
    <columns>Bill_Date__c</columns>
    <columns>Read_Date__c</columns>
    <columns>Consumption__c</columns>
    <columns>Total_Charges_Amount__c</columns>
    <columns>Total_Variance_Amount__c</columns>
    <columns>Total_Variance_Pct__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Utility Bills</label>
</ListView>