force-app/main/default/objects/Utility_Bill__c/listViews/Bills_Missing_Consumption.listView-meta.xml
<ListView>
    <fullName>Bills_Missing_Consumption</fullName>
    <columns>NAME</columns>
    <columns>Meter__c</columns>
    <columns>Bill_Date__c</columns>
    <columns>Read_Date__c</columns>
    <columns>Previous_Reading__c</columns>
    <columns>Current_Reading__c</columns>
    <columns>Consumption__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Consumption__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <label>Bills Missing Consumption</label>
</ListView>