force-app/main/default/objects/Utility_Bill__c/listViews/Bills_With_Increases.listView-meta.xml
<ListView>
    <fullName>Bills_With_Increases</fullName>
    <columns>NAME</columns>
    <columns>Meter__c</columns>
    <columns>Read_Date__c</columns>
    <columns>Consumption__c</columns>
    <columns>Total_Charges_Amount__c</columns>
    <columns>Usage_Variance_Amount__c</columns>
    <columns>Rate_Variance_Amount__c</columns>
    <columns>Total_Variance_Amount__c</columns>
    <columns>Total_Variance_Pct__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Variance_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Bills With Increases</label>
</ListView>